@startuml
' ==========================================================
' Diagramme de classes participantes — UC « Supprimer compte »
' Alignement : `backend/routes/api/userRoutes.js`, `backend/services/accountService.js`
' ==========================================================

title Diagramme de classes participantes — UC « Supprimer compte »
left to right direction
skinparam dpi 160
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam wrapWidth 240

class UserRoutes <<controller>> {
  +POST /api/users/delete-account()
}

class AccountService <<service>> {
  +deleteAccount({ userId })
}

class User <<model>> {
  +deletedAt
  +email
}

class Project <<model>> {
  +creatorId
}

class Investment <<model>> {
  +investorId
}

class Payout <<model>> {
  +creatorId
  +status
}

UserRoutes ..> AccountService
AccountService ..> User
AccountService ..> Project
AccountService ..> Investment
AccountService ..> Payout

note bottom of AccountService
  Vérifie soldes / retraits en cours\n
  avant anonymisation (voir code).
end note

@enduml
